add login and signup templates

--- a/grocery_app/templates/grocery_app/layout.html
+++ b/grocery_app/templates/grocery_app/layout.html
@@ -22,9 +22,10 @@
         <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="#">Add Item</a>
         <a class="nav-item nav-link" href="#">Logout</a>
+        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Username</a>
         {% else %}
-        <a class="nav-item nav-link" href="#">Login</a>
-        <a class="nav-item nav-link disabled" href="#">Sign Up</a>
+        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+        <a class="nav-item nav-link" href="{% url 'signup' %}">Sign Up</a>
         {% endif %}
       </div>
     </div>
