--- a/grocery_app/templates/grocery_app/layout.html
+++ b/grocery_app/templates/grocery_app/layout.html
@@ -21,7 +21,7 @@
         {% if user.is_authenticated %}
         <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="#">Add Item</a>
-        <a class="nav-item nav-link" href="#">Logout</a>
+        <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
         <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Username</a>
         {% else %}
         <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
