--- a/grocery_app/templates/grocery_app/login.html
+++ b/grocery_app/templates/grocery_app/login.html
@@ -6,14 +6,18 @@
 {% block body %}
 <div class="container mt-5">
   <h1>Login</h1>
-  <form>
+  {% if error %}
+  <p>{{ error }}</p>
+  {% endif %}
+  <form action="{% url 'login' %}" method="POST">
+    {% csrf_token %}
     <div class="form-group">
       <label>Username</label>
-      <input type="text" class="form-control" placeholder="Username" />
+      <input type="text" class="form-control" name="username" placeholder="Username" />
     </div>
     <div class="form-group">
       <label>Password</label>
-      <input type="password" class="form-control" placeholder="password" />
+      <input type="password" class="form-control" name="password" placeholder="password" />
     </div>
     <div class="form-group">
       <input type="submit" value="Login" class="btn btn-danger">
