--- a/grocery_app/templates/grocery_app/layout.html
+++ b/grocery_app/templates/grocery_app/layout.html
@@ -25,7 +25,7 @@
         <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Username</a>
         {% else %}
         <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-        <a class="nav-item nav-link" href="{% url 'signup' %}">Sign Up</a>
+        <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
         {% endif %}
       </div>
     </div>
