--- a/grocery_app/templates/grocery_app/register.html
+++ b/grocery_app/templates/grocery_app/register.html
@@ -6,31 +6,34 @@
 {% block body %}
 <div class="container mt-5">
   <h1>Create an account</h1>
-  <form>
+  {% if error %}
+  <p>{{ error }}</p>
+  {% endif %}
+  <form action="{% url 'register' %}" method="POST">
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="first_name">First Name</label>
-        <input type="text" class="form-control" id="first_name">
+        <input type="text" class="form-control" id="first_name" name="first_name">
       </div>
       <div class="form-group col-md-6">
         <label for="last_name">Last Name</label>
-        <input type="password" class="form-control" id="last_name">
+        <input type="password" class="form-control" id="last_name" name="last_name">
       </div>
       <div class="form-group col-md-6">
         <label for="username">Username</label>
-        <input type="text" class="form-control" id="username">
+        <input type="text" class="form-control" id="username" name="username">
       </div>
       <div class="form-group col-md-6">
         <label for="email">Email</label>
-        <input type="password" class="form-control" id="email">
+        <input type="password" class="form-control" id="email" name="email">
       </div>
       <div class="form-group col-md-6">
         <label for="password">Password</label>
-        <input type="text" class="form-control" id="password">
+        <input type="text" class="form-control" id="password" name="password">
       </div>
       <div class="form-group col-md-6">
         <label for="confirm_password">Confirm Password</label>
-        <input type="password" class="form-control" id="confirm_password">
+        <input type="password" class="form-control" id="confirm_password" name="confirm-password">
       </div>
     </div>
     <div class="form-group">
