--- a/grocery_app/templates/grocery_app/register.html
+++ b/grocery_app/templates/grocery_app/register.html
@@ -7,9 +7,12 @@
 <div class="container mt-5">
   <h1>Create an account</h1>
   {% if error %}
-  <p>{{ error }}</p>
+  <div class="alert alert-danger" role="alert">
+    {{ error }}
+  </div>
   {% endif %}
   <form action="{% url 'register' %}" method="POST">
+    {% csrf_token %}
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="first_name">First Name</label>
@@ -17,7 +20,7 @@
       </div>
       <div class="form-group col-md-6">
         <label for="last_name">Last Name</label>
-        <input type="password" class="form-control" id="last_name" name="last_name">
+        <input type="text" class="form-control" id="last_name" name="last_name">
       </div>
       <div class="form-group col-md-6">
         <label for="username">Username</label>
@@ -25,11 +28,11 @@
       </div>
       <div class="form-group col-md-6">
         <label for="email">Email</label>
-        <input type="password" class="form-control" id="email" name="email">
+        <input type="email" class="form-control" id="email" name="email">
       </div>
       <div class="form-group col-md-6">
         <label for="password">Password</label>
-        <input type="text" class="form-control" id="password" name="password">
+        <input type="password" class="form-control" id="password" name="password">
       </div>
       <div class="form-group col-md-6">
         <label for="confirm_password">Confirm Password</label>
