--- a/grocery_app/templates/grocery_app/layout.html
+++ b/grocery_app/templates/grocery_app/layout.html
@@ -20,10 +20,10 @@
       <div class="navbar-nav">
         {% if user.is_authenticated %}
         <a class="nav-item nav-link active" href="{% url 'index' %}">Home<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Add Item</a>
+        <a class="nav-item nav-link" href="{% url 'add' %}">Add Item</a>
         <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">{% block username %}
-          {%endblock%}</a>
+        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">{{ request.user.username
+          }}</a>
         {% else %}
         <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
         <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
