--- a/grocery_app/templates/grocery_app/index.html
+++ b/grocery_app/templates/grocery_app/index.html
@@ -41,7 +41,7 @@
           <p class="text-danger">{{ item.status }}</p>
           {% endif %}
           <a href="#" class="card-link">Update</a>
-          <a href="#" class="card-link">Delete</a>
+          <a href="{% url 'delete' item.pk %}" class="card-link">Delete</a>
         </div>
       </div>
     </div>
