--- a/grocery_app/templates/grocery_app/add.html
+++ b/grocery_app/templates/grocery_app/add.html
@@ -10,11 +10,11 @@
     {% csrf_token %}
     <div class="form-group">
       <label>Item name</label>
-      <input type="text" name="item_name" class="form-control" placeholder="Item name" />
+      <input type="text" name="item_name" class="form-control" placeholder="Item name" required />
     </div>
     <div class="form-group">
       <label>Item quantity</label>
-      <input type="text" name="quantity" class="form-control" placeholder="Item quantity" />
+      <input type="text" name="quantity" class="form-control" placeholder="Item quantity" required />
     </div>
     <div class="form-group">
       <label>Item status</label>
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group">
       <label>Date</label>
-      <input type="date" name="date" class="form-control" placeholder="Date">
+      <input type="date" name="date" class="form-control" placeholder="Date" required>
     </div>
     <div class="form-group">
       <input type="submit" value="Add" class="btn btn-danger">
